--- a/Manual/Template Manual.html
+++ b/Manual/Template Manual.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/font.css">
     <script src="js/ktane-utils.js"></script>
+    <style>
+        table td{text-align: center;}
+        table {margin : 1em auto;}
+    </style>
 </head>
 <body>
     <div class="section">
@@ -25,7 +29,7 @@
                 <p>This module consists of four bulbs labeled from 1 to 4.</p>
                 <p>Let A be a 4-digit binary number where the leftmost bulb is the most significant bit and the rightmost bulb is the least significant digit. (Lit represents a 1. Unlit represents a 0)</p>
                 <p>Let B be a 4-digit binary number where the bulb labeled 1 is the most significant bit and the bulb labeled 4 is the least significant digit.</p>
-                <p>Next, apply the solution technique related to the <strong>FIRST</strong> true condition. After the first press, all bulbs will turn off and all labels will disappear. Input a wrong press will make them reappear, and you will have to redo the entire sequence.</p>
+                <p>Next, apply the solution technique related to the <strong>FIRST</strong> true condition. After the first press, all bulbs will turn off and all labels will disappear. Striking on this module by inputtiing an incorrect press will make them reappear, and you will have to redo the entire sequence.</p>
                 <h4>If all 4 bulbs are on :</h4>
                 <p>Press the labels in ascending order.</p>
                 <h4>If all 4 bulbs are off :</h4>
@@ -42,7 +46,104 @@
                 <h4>Otherwise :</h4>
                 <p>Press the the lit bulbs' labels in ascending order, then the unlit bulbs' labels in descending order.</p>
             </div>
-            <div class="page-footer relative-footer">Page 1 of 1</div>
+            <div class="page-footer relative-footer">Page 1 of 2</div>
+        </div>
+        <div class="page page-bg-02">
+            <div class="page-header">
+                <span class="page-header-doc-title">Keep Talking and Nobody Explodes Mod</span>
+                <span class="page-header-section-title">Appendix BA5E</span>
+            </div>
+            <div class="page-content">
+                <h2>Appendix BA5E: Conversion in base 2, 10 and 16</h2>
+                <table>
+                    <tr>
+                        <th>Binary (base 2)</th>
+                        <th>Decimal (base 10)</th>
+                        <th>Hexadecimal (base 16)</th>
+                    </tr>
+                    <tr>
+                        <td>0000</td>
+                        <td>0</td>
+                        <td>0</td>
+                    </tr>
+                    <tr>
+                        <td>0001</td>
+                        <td>1</td>
+                        <td>1</td>
+                    </tr>
+                    <tr>
+                        <td>0010</td>
+                        <td>2</td>
+                        <td>2</td>
+                    </tr>
+                    <tr>
+                        <td>0011</td>
+                        <td>3</td>
+                        <td>3</td>
+                    </tr>
+                    <tr>
+                        <td>0100</td>
+                        <td>4</td>
+                        <td>4</td>
+                    </tr>
+                    <tr>
+                        <td>0101</td>
+                        <td>5</td>
+                        <td>5</td>
+                    </tr>
+                    <tr>
+                        <td>0110</td>
+                        <td>6</td>
+                        <td>6</td>
+                    </tr>
+                    <tr>
+                        <td>0111</td>
+                        <td>7</td>
+                        <td>7</td>
+                    </tr>
+                    <tr>
+                        <td>1000</td>
+                        <td>8</td>
+                        <td>8</td>
+                    </tr>
+                    <tr>
+                        <td>1001</td>
+                        <td>9</td>
+                        <td>9</td>
+                    </tr>
+                    <tr>
+                        <td>1010</td>
+                        <td>10</td>
+                        <td>A</td>
+                    </tr>
+                    <tr>
+                        <td>1011</td>
+                        <td>11</td>
+                        <td>B</td>
+                    </tr>
+                    <tr>
+                        <td>1100</td>
+                        <td>12</td>
+                        <td>C</td>
+                    </tr>
+                    <tr>
+                        <td>1101</td>
+                        <td>13</td>
+                        <td>D</td>
+                    </tr>
+                    <tr>
+                        <td>1110</td>
+                        <td>14</td>
+                        <td>E</td>
+                    </tr>
+                    <tr>
+                        <td>1111</td>
+                        <td>15</td>
+                        <td>F</td>
+                    </tr>
+                </table>
+            </div>
+            <div class="page-footer relative-footer">Page 2 of 2</div>
         </div>
     </div>
 </body>
